--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,5 @@ notifications:
   email:
     - john@operationspark.org
     - max@operationspark.org
-  slack: operationspark:ixq1B2YGNVjAZoh3PVEOoHic
-
-notifications:
   slack: operationspark:IVZ9qgp3Ge6RTeSl7nftvktM
-  webhooks: https://opspark-bootcamp.firebaseIO.com/notifications.json
+  webhooks: https://opspark-bootcamp.firebaseIO.com
