--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ notifications:
     - john@operationspark.org
     - max@operationspark.org
   slack: operationspark:IVZ9qgp3Ge6RTeSl7nftvktM
-  webhooks: https://greenlight-jfraboni.c9users.io/webhooks/travisci
+  webhooks: https://greenlight-jfraboni.c9users.io/api/webhooks/travisci
