--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A javascript playground",
   "main": "app.js",
   "scripts": {
-    "test": "istanbul cover _mocha -- test/**/ -R spec"
+    "test": "istanbul cover _mocha -- test/ -R spec"
   },
   "repository": {
     "type": "git",
