--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ notifications:
     - john@operationspark.org
     - max@operationspark.org
   slack: operationspark:IVZ9qgp3Ge6RTeSl7nftvktM
-  webhooks: https://greenlight-jfraboni.c9users.io/api/webhooks/travisci
+  webhooks: https://greenlight.operationspark.org/api/webhooks/travisci
   
 script: ./pr.sh
